--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,8 +45,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2023.1.0f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\BasicTile.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\FogOfWarController.cs" />
      <Compile Include="Assets\Scripts\WorldGenerator.cs" />
      <Folder Include="Assets" />
